# massive-dangerzone

./: .gitignore
ros/: CMakeLists.txt  package.xml
ros/cmake/Modules/: Findbulletsim.cmake
ros/sqpp_interface_ros/: CMakeLists.txt  plugin_description.xml
ros/sqpp_interface_ros/include/sqpp_interface_ros/: rosconversions.h  sqpp_interface_ros.h
ros/sqpp_interface_ros/src/: #sqpp_interface_ros.cpp#  .#sqpp_interface_ros.cpp  rosconversions.cpp  sqpp_interface_ros.cpp  sqpp_plugin.cpp  test_ros_rave.cpp
